Added webservice bundle, favicon

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,7 +27,7 @@
         <div id="mainFrame">
             {% block headerBar %}
                 <div id="headerBar" class="grayGradient03" >
-                    <a href="{{ path( "tdc_front_homepage" ) }}" target="_blank">
+                    <a href="{{ path( "tdc_front_homepage" ) }}">
                         <div id="tdcBtn" class="loginBarBtn"></div>
                     </a>
                     <a href="http://www.facebook.com/pages/TD-Channel/136759419761676" target="_blank">
