Created paginator and cleaned up some routes

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -62,7 +62,7 @@
                         </tr>
                         <tr>
                             <td><a href="{{ path("tdc_front_about") }}">About</a></td>
-                            <td><a href="{{ path("tdc_front_catalog") }}">Catalog</a></td>
+                            <td><a href="{{ path("tdc_front_catalog_list") }}">Catalog</a></td>
                         </tr>
                         <tr>
                             <td><a href="{{ path("fos_user_security_login") }}">Login</a></td>
