--- a/src/tdc/FrontEndBundle/Resources/views/Default/about.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/about.html.twig
@@ -1,9 +1,11 @@
 {% extends 'tdcFrontEndBundle:Default:layout.html.twig' %}
 
-{% block title %}About{% endblock %}
+{% block titleName %}About{% endblock %}
 
 {% block contentArea %}
+<div id="contentHolder" >
     {% block body %}
     <h1>About</h1>
     {% endblock body %}
+</div>
 {% endblock contentArea %}
