--- a/src/tdc/FrontEndBundle/Resources/views/Default/home.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/home.html.twig
@@ -10,7 +10,7 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block title %}Home{% endblock %}
+{% block titleName %}Account{% endblock %}
 
 {% block contentArea%}
     <div id="userNavBar" class="grayGradient04" >
