--- a/src/tdc/FrontEndBundle/Resources/views/Default/layout.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/layout.html.twig
@@ -1,6 +1,5 @@
 {% extends '::base.html.twig' %}
 
-
 {% block loginBar %}
     {% if app.user == "" %}
         <form name="tdcLogin" action="{{ path("fos_user_security_check") }}" method="post">
@@ -17,11 +16,11 @@
             <a>forgot password</a>
         </div>
     {% else %}
-        logged in as <strong>{{ app.user ? app.user.username : 'Anonymous' }}</strong> - 
+        Welcome <strong>{{ app.user ? app.user.username : 'Anonymous' }}</strong> | 
+        <a href="{{ path('tdc_logedin_home') }}">Profile</a> | 
         <a href="{{ path('fos_user_security_logout') }}">Logout</a>
     {% endif %}
 {% endblock loginBar %}
-
 
 {% block javascripts %}
     {{ parent() }}
