--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>
         {% block title %}
-            TDC::
+            TDC:
             {% block titleName %}{% endblock titleName %}
         {% endblock title %}
         </title>
